--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "bcrypt": "^5.0.0",
     "bignumber.js": "^9.0.1",
     "dotenv": "^8.2.0",
+    "express-jwt": "^6.1.0",
     "file-type": "^16.4.0",
     "filepaths": "^0.3.0",
     "graphile-worker": "^0.6.0",
     "hapi-auth-bearer-token": "^6.1.6",
+    "hapi-bearer": "^0.0.2",
     "hapi-cors": "^1.0.3",
     "hapi-pino": "^6.1.0",
     "hapi-pulse": "^3.0.0",
@@ -46,7 +48,7 @@
     "sequelize-typescript": "^2.0.0",
     "speakeasy": "^2.0.0",
     "typescript": "^4.1.5",
-    "uuid": "^8.2.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@hapi/eslint-config-hapi": "^12.3.0",
