--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "hapi-pulse": "^3.0.0",
     "hapi-swagger": "^14.1.0",
     "joi": "^17.4.0",
+    "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.3.0",
     "qs": "^6.9.6",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.5.0",
+    "sequelize": "^6.14.0",
     "sequelize-typescript": "^2.0.0",
     "speakeasy": "^2.0.0",
     "typescript": "^4.1.5",
