--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hapi-pulse": "^3.0.0",
     "hapi-swagger": "^14.1.0",
     "joi": "^17.4.0",
+    "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.3.0",
